# job-portal-hackathon

./: .gitignore  ADMIN_DASHBOARD_COMPLETE.md  ADMIN_DASHBOARD_SETUP.md  ADMIN_DASHBOARD_VISUAL_SUMMARY.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  START_ALL.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml
Backend/: DockerFile  main.py  pyproject.toml  seed_db.py
Backend/app/api/: router.py
Backend/app/api/endpoints/: agen_chat.py  applications.py  auth.py  career_roadmap.py  cv_export.py  jobs.py  recommendations.py  resources.py  skill_analysis.py  skill_gap_analysis.py  users.py
Backend/app/api/schemas/: agent_chat.py  application.py  career_roadmap.py  job.py  recommendation.py  resources.py  skill_analysis.py  skill_gap_analysis.py  user.py
Backend/app/auth/: dependencies.py  dependency.py  security.py
Backend/app/core/: config.py  exceptions.py  logging_config.py
Backend/app/db/: base.py  init_db.py  session.py
Backend/app/db/crud/: analysis_report.py  application.py  conversation.py  job.py  resources.py  user.py
Backend/app/db/model/: application.py  career_roadmap_report.py  conversation.py  conversation_message.py  job.py  resources.py  skill_gap_analysis_report.py  user.py
Backend/app/db/seeded_data/: __init__.py  jobs_seed.py  resources_seed.py
Backend/app/db/seeds/: __init__.py
Backend/app/llm/prompts/: load_prompt.py
Backend/app/llm/prompts/agent_chat/: generic.yml  mentor.yml  router.yml
Backend/app/services/: embedding_service.py  latex_compilation.py  pdf_extraction.py  recommendation_service.py
(+226 files in other folders)
