[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.1",
    "fastembed>=0.7.3",
    "langchain>=1.0.5",
    "langchain-google-genai>=3.0.3",
    "langchain-groq>=1.0.1",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "pgvector>=0.4.1",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pymupdf>=1.26.6",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
